// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CallSummary renders a Blank Summary 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div />
  </body>,
  "container": <div />,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CallSummary renders a Call Summary 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="bar callBar"
        id="top"
      >
        <div
          class="govuk-summary-list govuk-summary-list--no-border govuk-!-margin-bottom-2"
          id="call_details"
        >
          <div
            class="govuk-summary-list__row summaryHeading"
          >
            <h3
              class="govuk-heading-m section-heading"
              id="call-heading"
            >
              Call : 
              15-Apr 17:30 to 17:33 : 173 secs
            </h3>
            <strong
              class="govuk-tag sentiment govuk-tag--blue"
            >
              neutral
            </strong>
          </div>
        </div>
        <dl
          class="govuk-summary-list"
          id="call-details"
        >
          <div
            class="govuk-summary-list__row"
          >
            <dt
              class="govuk-summary-list__key"
            >
              Categories
            </dt>
            <dd
              class="govuk-summary-list__value"
            >
              Vehicle
            </dd>
          </div>
          <div
            class="govuk-summary-list__row"
          >
            <dt
              class="govuk-summary-list__key"
            >
              Participants
            </dt>
            <dd
              class="govuk-summary-list__value"
            >
              Bob James, Customer
            </dd>
          </div>
        </dl>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="bar callBar"
      id="top"
    >
      <div
        class="govuk-summary-list govuk-summary-list--no-border govuk-!-margin-bottom-2"
        id="call_details"
      >
        <div
          class="govuk-summary-list__row summaryHeading"
        >
          <h3
            class="govuk-heading-m section-heading"
            id="call-heading"
          >
            Call : 
            15-Apr 17:30 to 17:33 : 173 secs
          </h3>
          <strong
            class="govuk-tag sentiment govuk-tag--blue"
          >
            neutral
          </strong>
        </div>
      </div>
      <dl
        class="govuk-summary-list"
        id="call-details"
      >
        <div
          class="govuk-summary-list__row"
        >
          <dt
            class="govuk-summary-list__key"
          >
            Categories
          </dt>
          <dd
            class="govuk-summary-list__value"
          >
            Vehicle
          </dd>
        </div>
        <div
          class="govuk-summary-list__row"
        >
          <dt
            class="govuk-summary-list__key"
          >
            Participants
          </dt>
          <dd
            class="govuk-summary-list__value"
          >
            Bob James, Customer
          </dd>
        </div>
      </dl>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CallSummary renders a Driver 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="bar driverBar"
        id="topDriver"
      >
        <div
          class="govuk-summary-list govuk-summary-list--no-border govuk-!-margin-bottom-2"
          id="driver_details"
        >
          <div
            class="govuk-summary-list__row summaryHeading"
          >
            <h3
              class="govuk-heading-m section-heading"
              id="driver-heading"
            >
              Driver Details
            </h3>
          </div>
        </div>
        <dl
          class="govuk-summary-list"
          id="vehicle-list-details"
        >
          <div
            class="govuk-summary-list__row"
          >
            <dt
              class="govuk-summary-list__key"
            >
              Name
            </dt>
            <dd
              class="govuk-summary-list__value"
            >
              Ken
               
              Jones
            </dd>
          </div>
          <div
            class="govuk-summary-list__row"
          >
            <dt
              class="govuk-summary-list__key"
            >
              Postcode
            </dt>
            <dd
              class="govuk-summary-list__value"
            >
              SA28 0FJ
            </dd>
          </div>
          <div
            class="govuk-summary-list__row"
          >
            <dt
              class="govuk-summary-list__key"
            >
              Driving licence number
            </dt>
            <dd
              class="govuk-summary-list__value"
            >
              FRED230586
            </dd>
          </div>
        </dl>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="bar driverBar"
      id="topDriver"
    >
      <div
        class="govuk-summary-list govuk-summary-list--no-border govuk-!-margin-bottom-2"
        id="driver_details"
      >
        <div
          class="govuk-summary-list__row summaryHeading"
        >
          <h3
            class="govuk-heading-m section-heading"
            id="driver-heading"
          >
            Driver Details
          </h3>
        </div>
      </div>
      <dl
        class="govuk-summary-list"
        id="vehicle-list-details"
      >
        <div
          class="govuk-summary-list__row"
        >
          <dt
            class="govuk-summary-list__key"
          >
            Name
          </dt>
          <dd
            class="govuk-summary-list__value"
          >
            Ken
             
            Jones
          </dd>
        </div>
        <div
          class="govuk-summary-list__row"
        >
          <dt
            class="govuk-summary-list__key"
          >
            Postcode
          </dt>
          <dd
            class="govuk-summary-list__value"
          >
            SA28 0FJ
          </dd>
        </div>
        <div
          class="govuk-summary-list__row"
        >
          <dt
            class="govuk-summary-list__key"
          >
            Driving licence number
          </dt>
          <dd
            class="govuk-summary-list__value"
          >
            FRED230586
          </dd>
        </div>
      </dl>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CallSummary renders a Vehicle 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="bar vehicleBar"
        id="topVehicle"
      >
        <div
          class="govuk-summary-list govuk-summary-list--no-border govuk-!-margin-bottom-2"
          id="vehicle_details"
        >
          <div
            class="govuk-summary-list__row summaryHeading"
          >
            <h3
              class="govuk-heading-m section-heading"
              id="call-heading"
            >
              Vehicle Details
            </h3>
          </div>
        </div>
        <dl
          class="govuk-summary-list"
          id="vehicle-list-details"
        >
          <div
            class="govuk-summary-list__row"
          >
            <dt
              class="govuk-summary-list__key"
            >
              Reg number
            </dt>
            <dd
              class="govuk-summary-list__value"
            >
              <span
                class="reg-mark-sm"
                id="registration-number-0"
              >
                ABC123
              </span>
            </dd>
          </div>
          <div
            class="govuk-summary-list__row"
          >
            <dt
              class="govuk-summary-list__key"
            >
              Make
            </dt>
            <dd
              class="govuk-summary-list__value"
            >
              Peugeot
            </dd>
          </div>
          <div
            class="govuk-summary-list__row"
          >
            <dt
              class="govuk-summary-list__key"
            >
              Model
            </dt>
            <dd
              class="govuk-summary-list__value"
            >
              205 GTI
            </dd>
          </div>
          <div
            class="govuk-summary-list__row"
          >
            <dt
              class="govuk-summary-list__key"
            >
              Colour
            </dt>
            <dd
              class="govuk-summary-list__value"
            >
              Black
            </dd>
          </div>
          <div
            class="govuk-summary-list__row"
          >
            <dt
              class="govuk-summary-list__key"
            >
              Doc ID
            </dt>
            <dd
              class="govuk-summary-list__value"
            >
              012345678
            </dd>
          </div>
        </dl>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="bar vehicleBar"
      id="topVehicle"
    >
      <div
        class="govuk-summary-list govuk-summary-list--no-border govuk-!-margin-bottom-2"
        id="vehicle_details"
      >
        <div
          class="govuk-summary-list__row summaryHeading"
        >
          <h3
            class="govuk-heading-m section-heading"
            id="call-heading"
          >
            Vehicle Details
          </h3>
        </div>
      </div>
      <dl
        class="govuk-summary-list"
        id="vehicle-list-details"
      >
        <div
          class="govuk-summary-list__row"
        >
          <dt
            class="govuk-summary-list__key"
          >
            Reg number
          </dt>
          <dd
            class="govuk-summary-list__value"
          >
            <span
              class="reg-mark-sm"
              id="registration-number-0"
            >
              ABC123
            </span>
          </dd>
        </div>
        <div
          class="govuk-summary-list__row"
        >
          <dt
            class="govuk-summary-list__key"
          >
            Make
          </dt>
          <dd
            class="govuk-summary-list__value"
          >
            Peugeot
          </dd>
        </div>
        <div
          class="govuk-summary-list__row"
        >
          <dt
            class="govuk-summary-list__key"
          >
            Model
          </dt>
          <dd
            class="govuk-summary-list__value"
          >
            205 GTI
          </dd>
        </div>
        <div
          class="govuk-summary-list__row"
        >
          <dt
            class="govuk-summary-list__key"
          >
            Colour
          </dt>
          <dd
            class="govuk-summary-list__value"
          >
            Black
          </dd>
        </div>
        <div
          class="govuk-summary-list__row"
        >
          <dt
            class="govuk-summary-list__key"
          >
            Doc ID
          </dt>
          <dd
            class="govuk-summary-list__value"
          >
            012345678
          </dd>
        </div>
      </dl>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
